--- a/6-components/_components.navigation.scss
+++ b/6-components/_components.navigation.scss
@@ -85,16 +85,14 @@ $menu-tabbed-item-active-bg-colour:    $green-victoria !default;
 
 // Makes two col button container with one button left & one right
 .two-btn-nav {
-    @include make-table-column($two-btn-layout);
-    vertical-align: top;
-    padding: 1.5em 0.5em;
+    @include make-table-column( $two-btn-layout );
 
     p {
         font-size: 80%;
         color: $grey-stack;
     }
 
-    .btn { margin: 0;  }
+    .btn { margin: 0; }
 
     &:last-child {
         .two-btn-wrap {
@@ -104,6 +102,6 @@ $menu-tabbed-item-active-bg-colour:    $green-victoria !default;
     }
 
     @include media ($tablet-and-bigger) {
-        padding: 1.5em;
+        //padding: 1.5em;
     }
 }
