--- a/6-components/_components.video-block.scss
+++ b/6-components/_components.video-block.scss
@@ -63,7 +63,7 @@ $bg-color: $grey-gallery;
     .video-body {
         position: relative;
         padding: 0;
-        margin: 0 auto .5em auto;
+        margin: 0 auto;
 
         @include media ($desktop-and-bigger) {
             max-width: 970px;
@@ -126,6 +126,7 @@ $bg-color: $grey-gallery;
 }
 
 .video__description {
+    margin-top: .5em;
 }
 
 // TODO: refactor
