--- a/6-components/_components.simple-blocks.scss
+++ b/6-components/_components.simple-blocks.scss
@@ -229,9 +229,9 @@ $mar-bot: .3em;
         color: $grey-mako;
         margin-bottom: $mar-bot;
 
-        .degree-code {
-            color: $green-victoria;
-            font-weight: bold;
+        .code {
+            color: #999;
+            font-weight: $weight-light;
         }
     }
 
