--- a/5-objects/_objects.icons.scss
+++ b/5-objects/_objects.icons.scss
@@ -87,6 +87,10 @@ $ico-code-calendar:        '\e81f';
 $ico-code-flag:            '\e820';
 
 
+/* ===== ENTITY CODES ======================================================= */
+
+$code-triangle-right: '\25b8';
+$code-triangle-down:  '\25be';
 
 
 /* ===== ICONS DEFINITIONS ================================================== */
@@ -152,11 +156,30 @@ $ico-code-flag:            '\e820';
 
     /* CSS only icons. */
 
+    // Text-based triangle
+    @include define-icon( triangle, $code-triangle-right ) {
+        display: inline;
+        transition: none;
+
+        .expanded & {
+            content: $code-triangle-down
+        }
+    }
+
+    // Border-based triangle
     &.caret:before {
         @include triangle(
             $ico-caret-width $ico-caret-height,
             $base-font-colour,
             right
         );
+    }
+}
+
+/** Link outside of the site with `ico ext-link`. */
+.link--external {
+    &:after {
+        @include iconify( inline, $ico-code-ext-link );
+        margin-left: .35em;
     }
 }
