Refactors various UI blocks, improves layout alignment and general UI consistency.

--- a/1-settings/_settings.base.scss
+++ b/1-settings/_settings.base.scss
@@ -5,6 +5,7 @@
 /* Configs, brand colors, spacing units, paths and more, defined as variables. */
 
 // *Note*: Imports are order sensitive!
+@import 'settings._imports.scss';
 @import 'settings.paths.scss';
 @import 'settings.fonts.scss';
 @import 'settings.colours.scss';
