--- a/5-objects/_objects.typography.scss
+++ b/5-objects/_objects.typography.scss
@@ -39,7 +39,7 @@
 
             @include make-list-square-bullet( $list-bullet-size ) {
                 position: relative; top: -.1em;
-                margin-right: $list-bullet-indent-right;
+                margin-right: .9em;
             }
         }
     }
@@ -48,7 +48,7 @@
         list-style: decimal;
 
         > li {
-            margin-left: 1.5em;
+            margin-left: $base-margin;
             padding-left: $list-bullet-indent-right - $list-bullet-size;
         }
     }
@@ -121,3 +121,15 @@ $hint-inline-active-colour:     black;
         margin-left: 0;
     }
 }
+
+// Adds short delimiting line AFTER actual item
+.item-separated {
+    &:after {
+        display: block;
+        @include size( 2em 2px );
+        content: "";
+        background-color: $grey-alto;
+        margin: .6em 0;
+    }
+}
+
