Refactors entry and degree requirements.

--- a/5-objects/_objects.forms.scss
+++ b/5-objects/_objects.forms.scss
@@ -120,3 +120,6 @@ $toggle-bg-colour:       #1d2624;
         }
     }
 }
+
+/** Wrapper around 2 (or more) elements that must be visually grouped together. */
+.control-group { white-space: nowrap; }
