--- a/6-components/_components.simple-blocks.scss
+++ b/6-components/_components.simple-blocks.scss
@@ -186,7 +186,7 @@ $nm-bg-color: $grey-gallery;
 }
 
 .related-degree,
-.majors-block {
+.major {
     .collapsible {
         max-height: 20000px;
         transition: .5s ease all;
