--- a/5-objects/_objects.forms.scss
+++ b/5-objects/_objects.forms.scss
@@ -5,7 +5,7 @@
 .form {
 
     // TODO: Refactor!
-    .form__group { padding: 1em 0; }
+    .form__group { margin-bottom: 1em; }
 
     .form__select {
         height: 2.3em;
